# rust-webapp-tutorial

./: Cargo.toml  README.md
first-todo-list/: Cargo.toml  README.md
first-todo-list/src/: main.rs
health-check/: Cargo.toml  README.md
health-check/src/: main.rs
second-todo-list/: Cargo.toml  README.md
second-todo-list/sql/: create_todo_table.sql
second-todo-list/src/: main.rs
